added integration tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 kucoin-futures-python = "^1.0.9"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.develop.dependencies]
