--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ pytest-asyncio = "^0.23.6"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+filterwarnings = ["ignore::DeprecationWarning"]  # Ignore DeprecationWarnings until kucoin-futures-python is updated
